--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A Social platform for the creative at heart",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack && npm run build && node server/dist/app.js",
+    "build": "rm -rf server/dist && babel server --out-dir server/dist",
+    "start-dev": "webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
@@ -12,5 +14,50 @@
   },
   "author": "Andela Simulations Programme",
   "license": "MIT",
-  "homepage": "https://github.com/andela/noldor-ah-frontend#readme"
+  "bugs": {
+    "url": "https://github.com/andela/noldor-ah-frontend/issues"
+  },
+  "homepage": "https://github.com/andela/noldor-ah-frontend#readme",
+  "dependencies": {
+    "@babel/node": "^7.0.0",
+    "acorn": "^6.0.4",
+    "acorn-jsx": "^5.0.1",
+    "axios": "^0.18.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.9.0",
+    "express": "^4.16.4",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-persist": "^5.10.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-loader": "^8.0.4",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "react-router": "^2.0.1",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
+  }
 }
