--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.9.0",
     "express": "^4.16.4",
-    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "redux-persist": "^5.10.0"
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
@@ -54,7 +54,9 @@
     "eslint-plugin-react": "^7.11.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.6.2",
     "react-router": "^2.0.1",
+    "redux-immutable-state-invariant": "^2.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
