--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: node_js
 node_js:
   - "stable"
 
+env:
+  global:
+    - CC_TEST_REPORTER_ID=f8b3269edd0fdf18250a3de7f8fffdcbc5838b21fb9448f35e96944a990cfb00
+
 cache:
   directories:
     - "node_modules"
