--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "webpack && npm run build && node server/dist/app.js",
     "build": "rm -rf server/dist && babel server --out-dir server/dist",
-    "start-dev": "webpack-dev-server --open"
+    "dev": "webpack-dev-server --open",
+    "test": "jest --config ./jest.config.json",
+    "test:watch": "jest --config ./jest.config.json --watch",
+    "test:coverage": "jest --config ./jest.config.json --coverage --colors"
   },
   "repository": {
     "type": "git",
@@ -24,8 +27,14 @@
     "acorn-jsx": "^5.0.1",
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.4.2",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "eslint": "^5.9.0",
     "express": "^4.16.4",
+    "jest": "^23.4.2",
+    "jsdom": "^13.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
@@ -59,6 +68,7 @@
     "redux-immutable-state-invariant": "^2.1.0",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
+    "redux-mock-store": "^1.5.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
