--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "history": "^4.7.2",
     "jest": "^23.4.2",
     "jsdom": "^13.0.0",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
     "react": "^16.6.3",
