--- a/package.json
+++ b/package.json
@@ -28,21 +28,24 @@
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.4.2",
+    "connected-react-router": "^5.0.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
     "eslint": "^5.9.0",
     "express": "^4.16.4",
+    "history": "^4.7.2",
     "jest": "^23.4.2",
     "jsdom": "^13.0.0",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-immutable-state-invariant": "^2.1.0",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0",
-    "prop-types": "^15.6.2"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
@@ -62,13 +65,13 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "react-router": "^2.0.1",
-    "redux-immutable-state-invariant": "^2.1.0",
     "node-sass": "^4.10.0",
-    "sass-loader": "^7.1.0",
+    "react-router": "^2.0.1",
     "redux-mock-store": "^1.5.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
