feature(signup):user signup/registration
    - signup component
    - webpack configuration for image files
    - axios utitilities to help with requests
    - signup routes and tests for signup
    - handles validations on user interface
    - render email verification component
    - handles email verification route

    [finishes #161290856]

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,7 +1,7 @@
 {
   "clearMocks": true,
 
-  "collectCoverageFrom": ["src/**/*.{js,jsx,mjs}"],
+  "collectCoverageFrom": ["src/**/*.{js,jsx,mjs}", "!src/index.js"],
 
   "coverageDirectory": "coverage",
 
