--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,9 @@
 version: '2'
+checks:
+  file-lines:
+    enabled: false
+  similar-code:
+    enabled: false
 plugins: 
   eslint:
     enabled: true
