--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack && npm run build && node server/dist/app.js",
     "build": "rm -rf server/dist && babel server --out-dir server/dist",
     "dev": "webpack-dev-server --open",
-    "test": "jest --config ./jest.config.json",
+    "test": "jest --config ./jest.config.json --coverage --colors",
     "test:watch": "jest --config ./jest.config.json --watch",
     "test:coverage": "jest --config ./jest.config.json --coverage --colors"
   },
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/andela/noldor-ah-frontend#readme",
   "dependencies": {
     "@babel/node": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
     "acorn": "^6.0.4",
     "acorn-jsx": "^5.0.1",
     "axios": "^0.18.0",
@@ -32,7 +33,6 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
-    "eslint": "^5.9.0",
     "express": "^4.16.4",
     "history": "^4.7.2",
     "jest": "^23.4.2",
@@ -54,6 +54,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
+    "axios-mock-adapter": "^1.15.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
     "babel-preset-react": "^6.24.1",
