--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "enzyme-to-json": "^3.3.4",
     "express": "^4.16.4",
     "history": "^4.7.2",
+    "html-react-parser": "^0.6.0",
     "jest": "^23.4.2",
     "jsdom": "^13.0.0",
     "moment": "^2.22.2",
