--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-loader-spinner": "^2.3.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
+    "react-toastify": "^4.5.1",
     "redux": "^4.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-persist": "^5.10.0",
