feat(createArticle): implement create article feature
- handle upload featured image
- use tinymce as text editor
- displays notification to users
- handle categories
- handle tags
- implement auto repload to draft
- add articles to redux store
- setup actions and reducers for creating articles
- setup other babel plugins
- testing components, actions and reducers

[finishes #161290861]

--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   "dependencies": {
     "@babel/node": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@tinymce/tinymce-react": "^2.4.0",
     "acorn": "^6.0.4",
     "acorn-jsx": "^5.0.1",
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.4.2",
     "dotenv": "^6.1.0",
+    "downshift": "^3.1.6",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
@@ -38,6 +41,7 @@
     "jest": "^23.4.2",
     "jsdom": "^13.0.0",
     "moment": "^2.22.2",
+    "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
     "react": "^16.6.3",
@@ -46,16 +50,21 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-toastify": "^4.5.1",
+    "react-tag-input": "^6.1.0",
+    "react-tagsinput": "^3.19.0",
     "redux": "^4.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tinymce": "^4.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "axios-mock-adapter": "^1.15.0",
