--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -4,6 +4,8 @@ checks:
     enabled: false
   similar-code:
     enabled: false
+  method-length:
+    enabled: false
 plugins: 
   eslint:
     enabled: true
