--- a/app.json
+++ b/app.json
@@ -4,13 +4,29 @@
   "scripts": {
   },
   "env": {
+    "NPM_CONFIG_PRODUCTION": {
+      "required": true
+    },
+    "App_Callback": {
+      "required": true
+    },
+    "Client_Callback": {
+      "required": true
+    }
   },
   "formation": {
   },
   "addons": [
-
+    {
+      "plan": "heroku-postgresql",
+      "options": {
+        "version": "9.5"
+      }
+    }
   ],
   "buildpacks": [
-
+    {
+      "url": "heroku/nodejs"
+    }
   ]
 }
