--- a/package.json
+++ b/package.json
@@ -40,18 +40,19 @@
     "html-react-parser": "^0.6.0",
     "jest": "^23.4.2",
     "jsdom": "^13.0.0",
-    "moment": "^2.22.2",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-loader-spinner": "^2.3.0",
+    "react-rating": "^1.6.2",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "react-toastify": "^4.5.1",
     "react-tag-input": "^6.1.0",
     "react-tagsinput": "^3.19.0",
+    "react-toastify": "^4.5.1",
     "redux": "^4.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-persist": "^5.10.0",
